--- a/ChitChat_Client_Windows/ChitChat_Client_WPF/ChitChat_Client_WPF.csproj
+++ b/ChitChat_Client_Windows/ChitChat_Client_WPF/ChitChat_Client_WPF.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
