--- a/ChitChat_Android/app/build.gradle
+++ b/ChitChat_Android/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -33,13 +36,13 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.annotation
+    implementation libs.lifecycle.livedata.ktx
+    implementation libs.lifecycle.viewmodel.ktx
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     // added libs
     implementation libs.signalr
-    implementation libs.chatkit
-    implementation 'com.android.tools.build:gradle:3.2.1'
-    implementation 'io.fabric.tools:gradle:1.27.0'
-    implementation 'com.google.gms:google-services:4.1.0'
+    implementation 'com.github.harsewaksingh13:ChatKit:1.1.3'
 }
